# py-igor

./: .gitignore  CHANGELOG.md  README.md  igor.py  pyproject.toml  setup.py
igor.py.egg-info/: PKG-INFO  SOURCES.txt
pyigor/: __init__.py  igor.py
